--- a/agecal.html
+++ b/agecal.html
@@ -42,6 +42,9 @@
             <p class="disAge"></p>
             
             <p class="disDays"></p>
+            <div class="button">
+                <button class="inbutton" type="reset" id="resetButton">Reset</button>
+            </div>
 
         </div>    
 
