--- a/agecal.html
+++ b/agecal.html
@@ -43,7 +43,7 @@
             
             <p class="disDays"></p>
             <div class="button">
-                <button class="inbutton" type="reset" id="resetButton">Reset</button>
+                <button class="nbutton" type="reset" id="resetButton">Reset</button>
             </div>
 
         </div>    
