--- a/agecal.html
+++ b/agecal.html
@@ -31,7 +31,7 @@
                 </div>
             </form>
             <div class="button">
-                <button class="inbutton" type="submit" id="submitButton">Submit</button>
+                <button class="inbutton" type="submit" id="submitButton">Calculate</button>
             </div>
         </div>
         
