--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <p class="disAge"></p>
       <p class="disDays"></p>
       <div class="button">
-        <button class="inbutton" type="reset" id="resetButton">Reset</button>
+        <button class="nbutton" type="reset" id="resetButton">Reset</button>
       </div>
     </div>    
 
