--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="./assets/stylesheets/style.css">
+  <link rel="stylesheet" href="./assets/stylesheets/reset.css">
 </head>
 <body class="background">
   
